--- a/index.html
+++ b/index.html
@@ -27,5 +27,16 @@
 
 <!-- Link the JavaScript file -->
     <script src="script.js"></script>
+<!-- index.html -->
+
+    <!-- Existing content -->
+    <section id="blog">
+        <h2>Latest Blog Posts</h2>
+        <p>Check out our latest articles...</p>
+        <!-- Blog post entries go here -->
+    </section>
+    <!-- Rest of the content -->
+
+
 </body>
 </html>
